# llvm-project

compiler-rt/include/profile/: InstrProfData.inc
compiler-rt/lib/profile/: InstrProfilingWriter.c
examples/: small_if_statement.c
llvm/: CMakeLists.txt
llvm/include/llvm/IR/: FixedMetadataKinds.def  IntrinsicInst.h  Intrinsics.td  MDBuilder.h
llvm/include/llvm/ProfileData/: InstrProf.h  InstrProfData.inc  InstrProfReader.h
llvm/include/llvm/Transforms/: Instrumentation.h
llvm/include/llvm/Transforms/Instrumentation/: InstrProfiling.h  PGOInstrumentation.h
llvm/lib/CodeGen/: CodeGenPrepare.cpp  IfConversion.cpp
llvm/lib/IR/: MDBuilder.cpp
llvm/lib/ProfileData/: InstrProf.cpp  InstrProfReader.cpp  InstrProfWriter.cpp
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  InstrProfiling.cpp  PGOInstrumentation.cpp  SwPrefetchPass.cpp  SwPrefetchPass.h  ValuePrefetching.cpp  ValuePrefetching.h  ValueProfilePlugins.inc
llvm/lib/Transforms/Utils/: SimplifyCFG.cpp
llvm/software_prefetch_pass/: CMakeLists.txt
llvm/software_prefetch_pass/swprefetcher/: CMakeLists.txt  SwPrefetchPass.cc
llvm/software_prefetch_pass/tests/: CMakeLists.txt  test_program.cpp
llvm/tests/: CMakeLists.txt  cmov.c  if_conversion.c  multiple_ifs_in_a_row.c  nested_if.c  prefetching_example.c  single_if.c
llvm/tools/llvm-profdata/: llvm-profdata.cpp
llvm/utils/benchmark/src/: CMakeLists.txt
tests/: CMakeLists.txt  multiple_ifs_in_a_row.c
